--- a/default.css
+++ b/default.css
@@ -1,7 +1,25 @@
 /*height: 100vh;*/
+@font-face{
+	font-family: roboto-regular;
+	src: url("../fonts/Roboto-Regular.ttf") format("opentype");
+}
+@font-face{
+	font-family: roboto-bold;
+	src: url("../fonts/Roboto-Bold.ttf") format("opentype");
+}
+@font-face{
+	font-family: roboto-italic;
+	src: url("../fonts/Roboto-Italic.ttf") format("opentype");
+}
+@font-face{
+	font-family: roboto-thin;
+	src: url("../fonts/Roboto-Thin.ttf") format("opentype");
+}
 body{
 	overflow:hidden;
+	font-family: "roboto-regular";
 }
+
 .full{
 	height: 100vh;
 	padding: 50px 100px;
@@ -10,8 +28,17 @@ body{
 	text-align: center;
 	line-height: 80vh;
 }
-.one{
+.title{
 	background: #fff;
+}
+.miya{
+    border-left: 11px solid red;
+    margin-left: 15px;
+}
+.miya .full.row div{
+	min-height: 90px;
+	font-family: "roboto-thin";
+	text-align: center;
 }
 .two{
 	background: green;
@@ -34,7 +61,9 @@ body{
 .seven1{
 	background: #fff;
 }
-.one h2,
+
+.miya h2,
+.title h2,
 .two h2,
 .three h2,
 .four h2,
@@ -46,6 +75,18 @@ body{
 	display: inline-block;
 	vertical-align: middle;
 	line-height: normal;
+}
+.title{
+	background: #f5f5f5;
+}
+.title h2{
+	font-size: 50px;
+}
+.miya{
+	background: #fff;
+}
+.miya h2{
+	font-size: 40px;
 }
 .jobs{
 	height: 450px;
@@ -84,4 +125,24 @@ a.button{
 #scrollable{
 	height: 60vh;
     overflow: scroll;
+}
+.topic{
+	padding: 1px 30px;
+	display: block;
+}
+.topic h3{
+	text-align: left;
+}
+.topic h2{
+	text-align: center;
+	display: block;
+}
+.hipertexto{
+	position: relative;
+}
+.next{
+	position: absolute;
+    bottom: 20%;
+    right: 5%;
+    font-size: 20px;
 }
