--- a/default.css
+++ b/default.css
@@ -1,28 +1,42 @@
 /*height: 100vh;*/
 @font-face{
 	font-family: roboto-regular;
-	src: url("../fonts/Roboto-Regular.ttf") format("opentype");
+	src: url("fonts/roboto/Roboto-Regular.ttf") format("opentype");
 }
 @font-face{
 	font-family: roboto-bold;
-	src: url("../fonts/Roboto-Bold.ttf") format("opentype");
+	src: url("fonts/roboto/Roboto-Bold.ttf") format("opentype");
 }
 @font-face{
 	font-family: roboto-italic;
-	src: url("../fonts/Roboto-Italic.ttf") format("opentype");
+	src: url("fonts/roboto/Roboto-Italic.ttf") format("opentype");
 }
 @font-face{
 	font-family: roboto-thin;
-	src: url("../fonts/Roboto-Thin.ttf") format("opentype");
+	src: url("fonts/roboto/Roboto-Thin.ttf") format("opentype");
+}
+@font-face{
+	font-family: pixel-operator8;
+	src: url("fonts/pixel_operator/PixelOperator8.ttf") format("opentype");
+}
+@font-face{
+	font-family: pixel-operator8-bold;
+	src: url("fonts/pixel_operator/PixelOperator8-Bold.ttf") format("opentype");
 }
 body{
 	overflow:hidden;
 	font-family: "roboto-regular";
 }
 
+.title8bits{
+	font-family: "pixel-operator8";
+}
+.title8bits-bold{
+	font-family: "pixel-operator8-bold";
+}
 .full{
 	height: 100vh;
-	padding: 50px 100px;
+	padding: 50px 15px;
 }
 .full{
 	text-align: center;
@@ -76,6 +90,9 @@ body{
 	vertical-align: middle;
 	line-height: normal;
 }
+.relative{
+	position: relative;
+}
 .title{
 	background: #f5f5f5;
 }
@@ -84,6 +101,11 @@ body{
 }
 .miya{
 	background: #fff;
+}
+.miya.carac img{
+	width: 100%;
+	position: absolute;
+	left: 15px;
 }
 .miya h2{
 	font-size: 40px;
