--- a/default.css
+++ b/default.css
@@ -45,6 +45,7 @@ body{
 .title{
 	background: #fff;
 }
+
 .miya{
     border-left: 11px solid red;
     margin-left: 15px;
@@ -54,14 +55,36 @@ body{
 	font-family: "roboto-thin";
 	text-align: center;
 }
+.isa{
+	border-left: 11px solid purple;
+    margin-left: 15px;
+}
+.greg{
+	border-left: 11px solid blue;
+    margin-left: 15px;
+}
+.greg.title a{
+	font-size: 20px;
+}
+.greg.buscadores img{
+	margin: 0 auto;
+    height: 100vh;
+    display: block;
+}
+.jonh{
+	border-left: 11px solid orange;
+    margin-left: 15px;
+}
+.jonh.title h2{
+	width: 90%;
+	line-height: 1.5;
+}
+
 .two{
-	background: green;
+	background: #fff;
 }
 .three{
-	background: yellow,
-}
-.four{
-	background: orange;
+	background: #fff;
 }
 .five{
 	background: blue;
@@ -93,9 +116,6 @@ body{
 .relative{
 	position: relative;
 }
-.title{
-	background: #f5f5f5;
-}
 .title h2{
 	font-size: 50px;
 }
@@ -107,18 +127,31 @@ body{
 	position: absolute;
 	left: 15px;
 }
+.miya.aspec .input-group{
+	margin: 0 auto;
+}
+.miya.aspec .input-group input{
+	font-size: 30px;
+	padding: 30px 20px;
+}
+.html-background{
+	background-image: url('images/html.png');
+	height: 65vh;
+	float: right;
+}
+.fluxo-html{
+	position: relative;
+	float: left;
+}
+.fluxo-html img{
+	position: absolute;
+	height: 52vh;
+}
 .miya h2{
 	font-size: 40px;
 }
 .jobs{
 	height: 450px;
-}
-.three{
-	background-image: url("images/pc.png"); 
-}
-.three h2{
-	background: green;
-	color: #fff;
 }
 .seven1 h1{
 	font-size: 90px;
@@ -132,21 +165,46 @@ span{
 input{
     outline: none;
     padding: 5px 20px;
-    border-radius: 10px;
-    border: none;
+    border-radius: 5px;
+    border: 1px solid rgba(128, 128, 128, 0.5);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.1);
 }
 a.button{
-	height: 46px;
     vertical-align: top;
     font-size: 20px;
     font-weight: 400;
 }
-.scroll{
-	height: 200vh;
+.search-area{
+	padding-top: 10%;
 }
-#scrollable{
-	height: 60vh;
-    overflow: scroll;
+.search-area a{
+	margin-top: 20px;
+	background: #f2f2f2;
+	border: 1px solid transparent;
+	font-size: 23px;
+	color: #757575;
+	padding: 10px 20px;
+}
+.search-area a:hover{
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#f8f8f8),to(#f1f1f1));
+    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    background-color: #f8f8f8;
+    background-image: linear-gradient(top,#f8f8f8,#f1f1f1);
+    background-image: -o-linear-gradient(top,#f8f8f8,#f1f1f1);
+    border: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    color: #222;
+}
+.search-area h2{
+	display: block;
+}
+.search-area input{
+    font-size: 25px;
+    width: 100vh;
+    display: block;
+    margin: 0 auto;
+    padding: 20px 40px;
 }
 .topic{
 	padding: 1px 30px;
