--- a/default.css
+++ b/default.css
@@ -284,6 +284,10 @@ body{
 .two{
 	background: #fff;
 }
+.jonh.img-full.google img{
+	width: 100vh;
+	height: auto;
+}
 .three{
 	background: #fff;
 }
